# semgrep-llm-vul

./: .gitignore  AGENTS.md  README.md  pyproject.toml  uv.toml  项目开发管理规范.md
.github/workflows/: check.yml
Insight/: README.md
benchmarks/: README.md  sources.md
benchmarks/cases/: README.md
benchmarks/live-cases/: README.md
benchmarks/templates/: case.yaml  expected.json  notes.md
docs/: architecture.md  benchmark-results.md  benchmark.md  development.md  git.md  glossary.md  methodology.md  product.md  roadmap.md  testing.md
docs/Insight/: 20260427-semgrep-taint-normalization.md  20260428-analysis-input-format.md  20260428-benchmark-case-harness.md  20260428-m2-reachability-model.md  20260428-methodology-foundation.md  20260428-sink-generation-pipeline.md  20260428-sink-heuristic-pack.md  20260429-dual-agent-collaboration-workflow.md  20260430-llm-semantic-augmentation.md  20260430-m2-source-control-local-ast-evidence.md  20260516-m2-local-guard-blocking-evidence.md  20260516-m3-minimal-poc-planning.md  20260517-m4-completion-boundary.md  (+7 more)
scripts/: benchmark  benchmark-live  benchmark-summary  check  e2e-smoke  update-semgrep-fixtures
tests/: __init__.py  helpers.py  test_analysis_input.py  test_benchmark.py  test_benchmark_cases.py  test_cli.py  test_e2e_cli.py  test_exp_live_runner.py  test_exp_verification.py  test_managed_fixtures.py  test_models.py  test_package.py  test_poc_generation.py  test_reachability.py  test_reporting.py  test_semgrep.py  test_semgrep_taint.py  test_sink_generation.py  test_sink_heuristics.py  test_taint_path_generation.py
(+212 files in other folders)
